Use getFirst/getLast for better readability.