@@ -63,11 +63,11 @@ public class Pattern {
     }
 
     public FQN top() {
-        return links.get(0).element();
+        return links.getFirst().element();
     }
 
     public FQN bottom() {
-        return links.get(links.size() - 1).element();
+        return links.getLast().element();
     }
 
     public Pattern topPattern() {
@@ -87,13 +87,13 @@ public class Pattern {
     }
 
     public Tuple<Pattern, PatternLink> popBottom() {
-        var last = links.get(links.size() - 1);
+        var last = links.getLast();
         var remainder = links.subList(0, links.size() - 1);
         return new Tuple<>(new Pattern(remainder), last);
     }
 
     public Tuple<Pattern, PatternLink> popTop() {
-        var first = links.get(0);
+        var first = links.getFirst();
         var remainder = links.subList(1, links.size());
         return new Tuple<>(new Pattern(remainder), first);
     }
