@@ -32,7 +32,7 @@ class SimpleProjectionTest {
         view.addQuery(Query.from(pkg("A")).create(t("A'")).build().project("id"));
         var queries = resolve(view);
         assertEquals(1, queries.size());
-        var query = queries.get(0);
+        var query = queries.getFirst();
         assertEquals("[src: [<++a: pkg.A;;.id==<id>>] tgt: [<++a': t.A';;.id==<id>>] corr: [++a<-->a']]", query.toRules().toString());
     }
 
@@ -45,7 +45,7 @@ class SimpleProjectionTest {
         );
         var queries = resolve(view);
         assertEquals(1, queries.size());
-        var query = queries.get(0);
+        var query = queries.getFirst();
         assertEquals("[src: [<++a: pkg.A;-[b]->b;>, <b: pkg.B;;.id==<id>>] tgt: [<++a': t.A';;.id==<id>>] corr: [++a<-->a']]", query.toRules().toString());
     }
 
@@ -58,7 +58,7 @@ class SimpleProjectionTest {
         );
         var queries = resolve(view);
         assertEquals(1, queries.size());
-        var query = queries.get(0);
+        var query = queries.getFirst();
         assertEquals("[src: [<++a: pkg.A;;.id==<id>>] tgt: [<++a': t.A';++-[b]->b';>, <++b': t.B';;.id==<id>>] corr: [++a<-->a', ++a<-->b']]", query.toRules().toString());
     }
 
